1.sms util refactor