@@ -1,5 +1,6 @@
-package com.huawei.it.euler.config.extension;
+package com.huawei.it.euler.ddd.infrastructure.sms;
 
+import com.alibaba.fastjson.JSONObject;
 import com.cloud.apigateway.sdk.utils.Client;
 import com.cloud.apigateway.sdk.utils.Request;
 import lombok.SneakyThrows;
@@ -14,60 +15,60 @@ import org.apache.http.ssl.SSLContextBuilder;
 import org.apache.http.util.EntityUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Value;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Component;
 
 import javax.net.ssl.SSLContext;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @Component
-public class SmsConfig {
-    private static final Logger logger = LoggerFactory.getLogger(SmsConfig.class);
+public class SmsService {
+    private static final Logger logger = LoggerFactory.getLogger(SmsService.class);
 
-    @Value("${sns.messageUrl}")
-    private String messageUrl;
-
-    @Value("${sns.senderId}")
-    private String senderId;
-
-    @Value("${sns.appKey}")
-    private String appKey;
-
-    @Value("${sns.appSecret}")
-    private String appSecret;
+    @Autowired
+    private SmsProperties smsProperties;
 
     private static final String SIGNATURE_ALGORITHM_SDK_HMAC_SHA256 = "SDK-HMAC-SHA256";
+
     private static CloseableHttpClient client = null;
 
     @SneakyThrows
-    public void sendNotification(String templateId, String receiver, String templateParas) {
+    public SmsResponse sendNotification(String templateId, String receiver, String templateParas) {
         client = createIgnoreSSLHttpClient();
         String statusCallBack = "";
-        String signature = "";
-        String body = buildRequestBody(senderId, receiver, templateId, templateParas, statusCallBack, signature);
+        String signatureName = "";
+        String body = buildRequestBody(smsProperties.getSenderId(), receiver, templateId, templateParas, statusCallBack, signatureName);
         if (body.isEmpty()) {
             logger.warn("body is null.");
-            return;
+            return SmsResponse.invalidParameterResponse();
         }
 
         Request request = new Request();
-        request.setKey(appKey);
-        request.setSecret(appSecret);
-        request.setMethod("POST");
-        request.setUrl(messageUrl);
-        request.addHeader("Content-Type", "application/x-www-form-urlencoded");
+        request.setUrl(smsProperties.getMessageUrl());
+        request.setKey(smsProperties.getAppKey());
+        request.setSecret(smsProperties.getAppSecret());
+        request.setMethod(HttpMethod.POST.name());
+        request.addHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_FORM_URLENCODED_VALUE);
         request.setBody(body);
         try {
             HttpRequestBase signedRequest = Client.sign(request, SIGNATURE_ALGORITHM_SDK_HMAC_SHA256);
             HttpResponse response = client.execute(signedRequest);
             HttpEntity resEntity = response.getEntity();
             if (resEntity != null) {
-                logger.info("Processing Body with name: {} and value: {}", System.getProperty("line.separator"),
-                        EntityUtils.toString(resEntity, "UTF-8"));
+                String resEntityStr = EntityUtils.toString(resEntity, StandardCharsets.UTF_8);
+                logger.info("Processing Body with name: {} and value: {}", System.lineSeparator(),
+                        resEntityStr);
+                return JSONObject.parseObject(resEntityStr, SmsResponse.class);
             }
+            return SmsResponse.noResponse();
         } catch (Exception e) {
             logger.error(e.getMessage(), e);
+            return SmsResponse.sendExceptionResponse(e.getMessage());
         }
     }
 
@@ -85,14 +86,13 @@ public class SmsConfig {
 
     private void appendToBody(StringBuilder body, String key, String value) throws UnsupportedEncodingException {
         if (null != value && !value.isEmpty()) {
-            body.append(key).append(URLEncoder.encode(value, "UTF-8"));
+            body.append(key).append(URLEncoder.encode(value, StandardCharsets.UTF_8));
         }
     }
 
     private CloseableHttpClient createIgnoreSSLHttpClient() throws Exception {
-        SSLContext sslContext =
-                new SSLContextBuilder().loadTrustMaterial(null, (x509CertChain, authType) -> true).build();
-        return HttpClients.custom()
-                .setSSLSocketFactory(new SSLConnectionSocketFactory(sslContext, NoopHostnameVerifier.INSTANCE)).build();
+        SSLContext sslContext = new SSLContextBuilder().loadTrustMaterial(null, (x509CertChain, authType) -> true).build();
+        return HttpClients.custom().setSSLSocketFactory(new SSLConnectionSocketFactory(sslContext, NoopHostnameVerifier.INSTANCE)).build();
     }
+
 }
